# PureGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format.bat
Cmake/: PureOutput.cmake  (+1 more)
PureApp/: .gitignore  CMakeLists.txt
PureApp/include/PureApp/: AppErrorDesc.h  BindAllPureApp.h  BindAllPureDb.h  BindAllPureEncrypt.h  BindAllPureMsg.h  BindAllPureNet.h  LuaMsgProto.h  PureApp.h  PureAppLib.h  PureAppVersion.h  PureExe.h  PureMain.h
PureApp/src/: AppErrorDesc.cpp  BindAllPureApp.cpp  BindAllPureDb.cpp  BindAllPureEncrypt.cpp  BindAllPureMsg.cpp  BindAllPureNet.cpp  PureApp.cpp  PureAppVersion.cpp  PureExe.cpp  PureMain.cpp
PureApp/src/BindLua/PureApp/: BindAppErrorDesc.cpp  BindAppVersion.cpp  BindPureApp.cpp  BindPureExe.cpp
PureApp/src/BindLua/PureDb/: BindDbErrorDesc.cpp  BindDbVersion.cpp  BindLevelAsyncConnector.cpp  BindLevelConnector.cpp  BindRedisAsyncConnector.cpp  BindRedisAsyncPool.cpp  BindRedisConnector.cpp
PureApp/src/BindLua/PureEncrypt/: BindEncryptErrorDesc.cpp  BindEncryptVersion.cpp  BindPureBase64.cpp  BindPureCrc32.cpp  BindPureLz4.cpp  BindPureMD5.cpp  BindPureSha1.cpp  BindPureSha256.cpp  BindPureSha512.cpp  BindPureSnappy.cpp  BindPureXxtea.cpp  BindPureZip.cpp
PureApp/tools/: PureLuaArchive.cpp
PureCore/: CMakeLists.txt
PureCore/include/PureCore/: ArgParser.h  ArrayRef.h  ByteOrder.h  CoreErrorDesc.h  DataRef.h  Event.h  FixedVector.h  Geometry.h  IncrIDGen.h  MovePtr.h  NodeList.h  OsHelper.h  PureCoreLib.h  PureCoreVersion.h  PureJson.h  PureLog.h  PureLogger.h  PureSignal.h  PureXml.h  QuadTree.h  RBTimer.h  RandomGen.h  RectTree.h  ReuseIDGen.h  SleepIdler.h  SnowIDGen.h  StringRef.h  TWTimer.h  Task.h  Thread.h  TimeCounter.h  TimerNode.h  UtfHelper.h
PureCore/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  logger-inl.h  logger.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h
PureCore/src/: ArgParser.cpp  CoreErrorDesc.cpp  Geometry.cpp  IncrIDGen.cpp  NodeList.cpp  OsHelper.cpp  PureCoreVersion.cpp  PureJson.cpp  PureLogger.cpp  PureSignal.cpp  PureXml.cpp  QuadTree.cpp  RBTimer.cpp  RandomGen.cpp  RectTree.cpp  ReuseIDGen.cpp  SleepIdler.cpp  SnowIDGen.cpp  TWTimer.cpp  Task.cpp  Thread.cpp  TimeCounter.cpp  TimerNode.cpp  UtfHelper.cpp
PureCore/src/Buffer/: BufferReader.cpp  BufferView.cpp  BufferWriter.cpp  DynamicBuffer.cpp  FixedBuffer.cpp  ReferBuffer.cpp
PureCore/src/Memory/: FixedAllocator.cpp  MemoryChunk.cpp  SmallAllocator.cpp
PureDb/: CMakeLists.txt
PureDb/include/PureDb/: DbErrorDesc.h  PureDb.h  PureDbLib.h  PureDbVersion.h
PureDb/src/: DbErrorDesc.cpp  PureDb.cpp  PureDbVersion.cpp
PureDb/src/LevelDb/: LevelAsyncConnector.cpp  LevelConnector.cpp  LevelReply.cpp
PureDb/src/Redis/: RedisAsyncConnector.cpp  RedisAsyncPool.cpp  RedisConnector.cpp  RedisReply.cpp
PureDb/tools/: PureLevelReverter.cpp
PureEncrypt/: CMakeLists.txt
PureEncrypt/include/PureEncrypt/: EncryptErrorDesc.h  PureBase64.h  PureCrc32.h  PureEncryptLib.h  PureEncryptVersion.h  PureLz4.h  PureMD5.h  PureSha1.h  PureSha256.h  PureSha512.h  PureSnappy.h  PureXxtea.h  PureZip.h
PureEncrypt/src/: EncryptErrorDesc.cpp  PureBase64.cpp  PureCrc32.cpp  PureEncryptVersion.cpp  PureLz4.cpp  PureMD5.cpp  PureSha1.cpp  PureSha256.cpp  PureSha512.cpp  PureSnappy.cpp  PureXxtea.cpp  PureZip.cpp
PureGame/: CMakeLists.txt
PureGame/src/: Main.cpp
PureLua/: .clang-format  CMakeLists.txt
PureLua/generator/: LuaStackBase.lua  LuaStackSTL.lua  generator.bat  generator.sh
PureLua/include/PureLua/: BindAllPureCore.h  LuaClassCtorHelper.h  LuaClassCtorTraits.h  LuaClassInfo.h  LuaClassMethodTraits.h  LuaClassMgr.h  LuaClassMoveReturnTraits.h  LuaClassNewerDeler.h  LuaClassPropertyTraits.h  LuaDebugger.h  LuaDefAutoTool.h  LuaDefTool.h  LuaDefTraits.h  LuaErrorDesc.h  LuaFunctionTraits.h  LuaHelper.h  LuaIterator.h  LuaJson.h  LuaLamadaTraits.h  LuaMetatable.h  LuaMetatableTraits.h  LuaModule.h  LuaMoveReturnTraits.h  LuaObjectCache.h  LuaObjectPushTraits.h  LuaPointer.h  LuaPointerAdapter.h  LuaProfiler.h  LuaRef.h  LuaRegisterClass.h  LuaRegisterClass.inl.h  LuaRegisterEnum.h  LuaRegisterEnum.inl.h  LuaRegisterNode.h  LuaResult.h  LuaRunner.h  LuaSTLAdapter.h  LuaSTLAdapter.inl.h  LuaStack.h  LuaStackBase.h  (+18 more)
PureLua/src/: LuaClassMgr.cpp  LuaDebugger.cpp  LuaErrorDesc.cpp  LuaHelper.cpp  LuaIterator.cpp  LuaJson.cpp  LuaMetatable.cpp  LuaModule.cpp  LuaObjectCache.cpp  LuaProfiler.cpp  LuaRef.cpp  LuaRegisterNode.cpp  LuaRunner.cpp  LuaSTLAdapter.cpp  LuaTableRef.cpp  LuaUserdataForClass.cpp  LuaWeakRef.cpp  LuaXml.cpp  PureLuaEnv.cpp  PureLuaVersion.cpp
PureLua/src/BindPureCore/: BindAllPureCore.cpp  BindBuffer.cpp  BindCoreErrorDesc.cpp  BindCoreVersion.cpp  BindDataRef.cpp  BindGeometry.cpp  BindIncrIDGen.cpp  BindOsHelper.cpp  BindPureJson.cpp  BindPureXml.cpp  BindQuadTree.cpp  BindRBTimer.cpp  BindRandomGen.cpp  BindRectTree.cpp  BindReuseIDGen.cpp  BindSleepIdler.cpp  BindSnowIDGen.cpp  BindTWTimer.cpp  BindTimeCounter.cpp  BindUtfHelper.cpp
PureMsg/: CMakeLists.txt
PureMsg/include/PureMsg/: MsgArgs.h  MsgBuffer.h  MsgBuffer.inl.h  MsgClass.h  MsgErrorDesc.h  MsgHead.h  MsgSpecialType.h  Packer.h  PackerAdapter.h  PureMsgLib.h  PureMsgVersion.h  Unpacker.h  UnpackerAdapter.h
PureMsg/src/: MsgErrorDesc.cpp  Packer.cpp  PureMsgVersion.cpp  Unpacker.cpp
PureNet/: CMakeLists.txt
PureNet/include/PureNet/: Link.h  LinkFactory.h  LinkHandle.h  LinkMgr.h  LinkTcp.h  NetConfig.h  NetErrorDesc.h  NetMsg.h  NetProtocols.h  ProtocolStack.h  ProtocolStackT.h  PureNetAsync.h  PureNetLib.h  PureNetProcess.h  PureNetReacter.h  PureNetReq.h  PureNetThread.h  PureNetTypes.h  PureNetVersion.h  RouteMgr.h
PureNet/src/: Link.cpp  LinkFactory.cpp  LinkHandle.cpp  LinkMgr.cpp  LinkTcp.cpp  NetConfig.cpp  NetErrorDesc.cpp  NetMsg.cpp  ProtocolStack.cpp  PureNetProcess.cpp  PureNetReacter.cpp  PureNetReq.cpp  PureNetThread.cpp  PureNetVersion.cpp  RouteMgr.cpp
PureNet/src/Protocol/: MsgProtocol.cpp  TextProtocol.cpp  WebSocketProtocol.cpp
(+97 files in other folders)
